kubernetes/celery.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery
  labels:
    app: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery
  template:
    metadata:
      labels:
        app: celery
    spec:
      containers:
        - name: celery-app
          image: us.gcr.io/$GOOGLE_PROJECT_ID/ipno-backend:${BACKEND_IMAGE_TAG}
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
          command: ["celery"]
          args: ["-A", "ipno.config", "worker", "-l", "info", "-c", "$CELERY_NUM_WORKER"]
          volumeMounts:
            - name: backend-gsa
              mountPath: /var/secrets/google
        - image: us.gcr.io/cloudsql-docker/gce-proxy:1.32.0-alpine
          name: cloudsql-proxy
          command: ["/cloud_sql_proxy",
                    "-instances=$GOOGLE_PROJECT_ID:us-central1:${CLOUD_SQL_DATABASE}=tcp:5432",
                    "-verbose=false"]
      volumes:
        - name: backend-gsa
          secret:
            secretName: backend-gsa
      serviceAccountName: backend-ksa
