kubernetes/ipno.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipno-backend
  labels:
    app: ipno-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ipno-backend
  template:
    metadata:
      labels:
        app: ipno-backend
    spec:
      containers:
        - name: ipno-backend-app
          readinessProbe:
            httpGet:
              path: /api/status/
              port: readiness-port
          ports:
            - name: readiness-port
              containerPort: 8000
          image: us.gcr.io/$GOOGLE_PROJECT_ID/ipno-backend:${BACKEND_IMAGE_TAG}
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: backend-gsa
              mountPath: /var/secrets/google
        - image: us.gcr.io/cloudsql-docker/gce-proxy:1.32.0-alpine
          name: cloudsql-proxy
          command: ["/cloud_sql_proxy",
                    "-instances=$GOOGLE_PROJECT_ID:us-central1:${CLOUD_SQL_DATABASE}=tcp:5432",
                    "-verbose=false"]
      volumes:
        - name: backend-gsa
          secret:
            secretName: backend-gsa
      serviceAccountName: backend-ksa

---

apiVersion: v1
kind: Service
metadata:
  name: ipno-backend
  labels:
    app: ipno-backend
spec:
  type: ClusterIP
  ports:
    - targetPort: 8000
      port: 80
  selector:
    app: ipno-backend
