kubernetes/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ipno-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: "web-ipno-ip"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - llead.co
        - api.llead.co
        - admin.llead.co
      secretName: letsencrypt-tls
  rules:
    - host: llead.co
      http:
        paths:
          - backend:
              serviceName: ipno-frontend
              servicePort: 80
    - host: api.llead.co
      http:
        paths:
          - backend:
              serviceName: ipno-backend
              servicePort: 80
    - host: admin.llead.co
      http:
        paths:
          - backend:
              serviceName: ipno-backend
              servicePort: 80
