kubernetes/production.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipno-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "backend-ipno-production-ip"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: "letsencrypt"
    kubernetes.io/ingress.class: gce
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - api.llead.co
        - admin.llead.co
        - llead.co
      secretName: letsencrypt-tls
  rules:
    - host: llead.co
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ipno-frontend
                port:
                  number: 80
    - host: admin.llead.co
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ipno-backend
                port:
                  number: 80
    - host: api.llead.co
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ipno-backend
                port:
                  number: 80
